force-app/main/default/objects/Amenity_Booking__c/Amenity_Booking__c.object-meta.xml
<CustomObject>
    <label>Booking</label>
    <nameField>
        <displayFormat>ABK-{0000}</displayFormat>
        <label>Booking Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>