force-app/main/default/objects/Amenity_Booking__c/fields/Amenity__c.field-meta.xml
<CustomField>
    <fullName>Amenity__c</fullName>
    <label>Amenity</label>
    <referenceTo>PropertyAmenitiy__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>