force-app/main/default/objects/Amenity_Booking__c/fields/Booking_Time__c.field-meta.xml
<CustomField>
    <fullName>Booking_Time__c</fullName>
    <label>Booking Time</label>
    <type>DateTime</type>
</CustomField>