force-app/main/default/objects/Amenity_Booking__c/fields/Deposit_Received__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Received__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Deposit Received</label>
    <type>Checkbox</type>
</CustomField>